<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    //AddPetActivity Strings
    <string name="app_name">TailyCare</string>
    <string name="fa_hintEtPetName">Name*</string>
    <string name="ma_txtSpinnerEdad">Edad*</string>
    <array name="fa_arrayAgeSelected">
        <item>Cachorro(&lt;1 año)</item>
        <item>Adulto(1-7 años)</item>
        <item>Senior(7 años&gt;)</item>
    </array>
    <string-array name="ap_arraySelectAge">
        <item>Menos de 1 año</item>
        <item>1 año</item>
        <item>2 años</item>
        <item>3 años</item>
        <item>4 años</item>
        <item>5 años</item>
        <item>6 años</item>
        <item>7 años</item>
        <item>8 años</item>
        <item>9 años</item>
        <item>10 años</item>
        <item>Más de 10 años</item>
    </string-array>
    <string name="fa_txtSpinnerPeso">Peso actual*</string>
    <string name="fa_txtSpinnerSexo">Sexo</string>
    <string-array name="fa_arraySpinnerSexo">
        <item>Macho</item>
        <item>Hembra</item>
    </string-array>
    <string name="fa_txtSpinnerEsterilizado">¿Esta esterilizado?</string>
    <string-array name="fa_arraySpinnerEsterilizado">
        <item>Si</item>
        <item>No</item>
    </string-array>
    <string name="fa_txtSpinnerActividadFisica">Nivel de actividad física</string>
    <string-array name="fa_arraySpinnerActividadFisica">
        <item>Alta</item>
        <item>Media</item>
        <item>Baja</item>
    </string-array>
    <string name="fa_txtSpinnerObjetivo">Objetivo principal de la dieta*</string>
    <string-array name="fa_arraySpinnerObjetivo">
        <item>Mantenimiento</item>
        <item>Pérdida de peso</item>
        <item>Aumento de peso</item>
    </string-array>
    <string name="fa_txtButtonEnviarFormulario">Confirmar</string>
    <string name="fa_txtButtonCancelarEdicion">Cancelar</string>
    <string name="fa_txtTextInputAlergias">¿Alergias o intolerancias alimentarias?</string>
    <string name="fa_hintTextInputAlergias">p.ej. Atun</string>
    <string name="fa_txtRgSterilized">¿Esta esterilizado/a?</string>
    <string name="fa_txtSbWeight">0.0 Kg</string>
    <string name="fa_toastErrorGetData">Hay apartados sin rellenar. Por favor revise el formulario
    </string>
    <string name="fa_toastGetDataSuccess">Compañero registrado correctamente :D</string>


    //Search Activity Strings
    <string name="sa_txtHeader">Piensos para $nombre</string>
    <string name="query">Comida-para-%1$s-%2$s-%3$s-de-%4$f-de-peso</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_pet_compose">PetsActivity</string>
    <string name="title_activity_from_compose">FormActivity</string>
    <string name="title_activity_pet">PetActivity</string>
    <string name="pia_FoodModuleTitle">Registro Comidas</string>
    <string name="pia_FoodModuleBottomTxt">Recomendado</string>
    <string name="pia_HealthModuleTitle">Salud</string>
    <string name="pia_HealthModuleTxt1">Peso actual</string>
    <string name="pia_HealthModuleTxt2">Objetivo</string>
    <string name="pia_HealthModuleTxt3">Actividad</string>
    <string name="pia_RecordModuleTitle">Ficha</string>
    <string name="pia_RecordModuleTxt1">Esterilizado</string>
    <string name="pia_RecordModuleTxt2">Sexo</string>
    <string name="pia_RecordModuleTxt3">Edad</string>
    <string name="title_activity_edit_pet">EditPetActivity</string>
    <string name="title_activity_add_meal">AddMealActivity</string>
    <string name="apa_selectedOptionDropDownMenu">%1$s años</string>
    <string name="epa_notSelectedAgeOption">Seleccionar edad</string>
    <string name="apa_notSelectedAgeOption">Seleccionar edad</string>
    <string name="title_activity_main_pet">MainPetActivity</string>


</resources>
