<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".ui.view.FormActivity">

    <ImageButton
        android:id="@+id/fa_btnBack"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/formActivity_btnBack_height"
        android:layout_marginStart="@dimen/formActivity_btnBack_marginStart"
        android:layout_marginTop="@dimen/formActivity_btnBack_marginTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <LinearLayout
        android:id="@+id/fa_linearlyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/fa_btnBack">


        <ImageView
            android:id="@+id/fa_imgSelectAnimal"
            android:layout_width="@dimen/formActivity_imgSelectAnimal_width"
            android:layout_height="@dimen/formActivity_imgSelectAnimal_height"
            android:layout_marginStart="@dimen/formActivity_imgSelectAnimal_marginStart"
            app:srcCompat="@drawable/img_dog_illustration"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/fa_etPetName"
            android:layout_width="@dimen/formActivity_etPetName_width"
            android:layout_height="@dimen/formActivity_etPetName_height"
            android:layout_marginTop="@dimen/formActivity_etPetName_marginTop"
            android:layout_marginStart="@dimen/formActivity_etPetName_marginStart"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/fa_hintEtPetName"
            android:inputType="text"
        />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/formActivity_scrollView_marginStart"
        android:layout_marginTop="@dimen/formActivity_scrollView_marginTop"
        android:layout_marginEnd="@dimen/formActivity_scrollView_marginEnd"
        android:layout_marginBottom="@dimen/formActivity_scrollView_marginBottom"
        app:layout_constraintBottom_toTopOf="@+id/fa_btnCommit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fa_linearlyt">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ma_txtTextInputAlergias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/fa_txtTextInputAlergias"
                android:textSize="@dimen/app_body_txtSize"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ma_lytTextInputAlergias"
                android:layout_width="@dimen/formActivity_textInputAlergias_width"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/formActivity_textInputAlergias_marginTop"
                android:layout_marginBottom="@dimen/formActivity_textInputAlergias_marginBottom"
                android:hint="@string/fa_hintTextInputAlergias"
                android:layerType="none"
                android:layoutMode="clipBounds">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fa_TextInputAlergias"
                    android:layout_width="@dimen/formActivity_textInputAlergias_width"
                    android:layout_height="wrap_content"
                    android:breakStrategy="simple"
                    android:ellipsize="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/ma_txtSpinnerEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/ma_txtSpinnerEdad"
                android:textSize="@dimen/app_body_txtSize"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/fa_SpinnerEdad"
                android:layout_width="@dimen/formActivity_spinner_width"
                android:layout_height="@dimen/formActivity_spinner_height"
                android:layout_marginTop="@dimen/formActivity_spinner_marginTop"
                android:layout_marginBottom="@dimen/formActivity_spinner_marginBottom" />

            <TextView
                android:id="@+id/fa_txtSpinnerPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/fa_txtSpinnerPeso"
                android:textSize="@dimen/app_body_txtSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fa_txtWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/fa_txtSbWeight"
                android:textSize="@dimen/app_body_txtSize" />

            <SeekBar
                android:id="@+id/fa_sbWeight"
                android:layout_width="@dimen/formActivity_seekBarWeight_width"
                android:layout_height="wrap_content"
                android:max="1000"
                android:padding="@dimen/formActivity_seekBarWeight_padding"
                android:pointerIcon="none"
                android:progress="0" />

            <TextView
                android:id="@+id/ma_txtSpinnerSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/fa_txtSpinnerSexo"
                android:textSize="@dimen/app_body_txtSize"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/fa_SpinnerSexo"
                android:layout_width="@dimen/formActivity_spinner_width"
                android:layout_height="@dimen/formActivity_spinner_height"
                android:layout_marginTop="@dimen/formActivity_spinner_marginTop"
                android:layout_marginBottom="@dimen/formActivity_spinner_marginBottom" />

            <TextView
                android:id="@+id/ma_txtRgSterilized"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/fa_txtRgSterilized"
                android:textSize="@dimen/app_body_txtSize"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/fa_rgEsterilizado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/formActivity_radioGroup_marginVertical"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/fa_rbEsterilizado1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/formActivity_radioButton_marginEnd"
                    android:text="Si"
                    android:textSize="@dimen/app_body_txtSize" />

                <RadioButton
                    android:id="@+id/fa_rbEsterilizado2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"
                    android:textSize="@dimen/app_body_txtSize" />
            </RadioGroup>

            <TextView
                android:id="@+id/ma_txtSpinnerActividad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/fa_txtSpinnerActividadFisica"
                android:textSize="@dimen/app_body_txtSize"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/fa_SpinnerActividad"
                android:layout_width="@dimen/formActivity_spinner_width"
                android:layout_height="@dimen/formActivity_spinner_height"
                android:layout_marginTop="@dimen/formActivity_spinner_marginTop"
                android:layout_marginBottom="@dimen/formActivity_spinner_marginBottom" />

            <TextView
                android:id="@+id/ma_txtSpinnerObjetivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/fa_txtSpinnerObjetivo"
                android:textSize="@dimen/app_body_txtSize"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/fa_SpinnerObjetivo"
                android:layout_width="@dimen/formActivity_spinner_width"
                android:layout_height="@dimen/formActivity_spinner_height"
                android:layout_marginTop="@dimen/formActivity_spinner_marginTop"
                android:layout_marginBottom="@dimen/formActivity_spinner_marginBottom" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/fa_btnCommit"
        android:layout_width="@dimen/formActivity_commitButton_width"
        android:layout_height="@dimen/formActivity_commitButton_height"
        android:layout_marginStart="@dimen/formActivity_commitButton_marginStart"
        android:layout_marginEnd="@dimen/formActivity_commitButton_marginEnd"
        android:layout_marginBottom="@dimen/formActivity_commitButton_marginBottom"
        android:text="@string/fa_txtButtonEnviarFormulario"
        android:textSize="@dimen/formActivity_commitButton_txtSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
